--- a/package/ui/index.html
+++ b/package/ui/index.html
@@ -14,7 +14,8 @@
 		</style>
 	</head>
 	<body>
-		<fieldset><legend>TeamSpeak 3 Server Status: ==:TS3ServerStatus:==</legend>
+		<fieldset>
+			<legend>TeamSpeak 3 Server Status: ==:TS3ServerStatus:==</legend>
 			<p><strong><u>TeamSpeak 3 Server Admin Password:</u></strong></p>
 			<p><strong>Please make sure,<br>that your password meets the following requirements:</strong><br />
 			<small>Has at least one lowercase<br />
